--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/theming";
+@import "./styles/custom-theme.scss";
+@import '~@ctrl/ngx-emoji-mart/picker';
+
+@import './styles/variables';
+@import './styles/galleries-list';
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; color: mat-color($Primary); }
+
+.mat-dialog-container {
+    padding: 0 !important;
+}
